# kk2-oraklet-v2

./: .gitignore  README.md  pyproject.toml  reflektion.md  testdata.csv
app/: data.py  main.py  schemas.py
app/chain/: pipeline.py  runnable.py  steps.py
app/tests/: test_chain.py  test_endpoints.py
