[project]
name = "kk2-oraklet-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "pandas>=3.0.3",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "torch>=2.12.0",
    "transformers>=5.10.2",
    "uvicorn>=0.49.0",
]
